# gtfs-exporter

./: .dockerignore  .env  .gitignore  .travis.yml  Dockerfile  README.md  build.sh  exporter.py  exporter.spec  pyproject.toml  requirements.txt  setup.py  travis-build.sh
.github/workflow/: dev-pipeline.yml
.github/workflow/scripts/: build_and_push_dev.sh  push_prod.sh
.github/workflows/: dev-pipeline.yml  prod-pipeline.yml
.github/workflows/scripts/: build_and_push_dev.sh  push_prod.sh
exporter/: GtfsWritter.py  Providers.py  __init__.py  bucharest.sqlite-journal  main.py  processor.py  provider.py  settings.py  writer.py
exporter/api/: ApiProviders.py  Builder.py  __init__.py  brasov.py  brasov_data.py  bucharest.py  builder.py  cluj.py  constanta.py  iasi.py  radcom.py  requests.py
exporter/gtfs/: converter.py  csvgtfs.py  dao.py  model.py  orm.py  spatial.py  utils.py
exporter/static/: __init__.py  __main__.py  processor.py  processors.py  providers.py
exporter/util/: csv.py  http.py  logging.py  perf.py  spatial.py  storage.py
exporter/vcs/: github.py
tests/: conftest.py  test_all_gtfs.py  test_autojoin.py  test_broken.py  test_dao.py  test_demo.py  test_dummy.py  test_gtfs.py  test_gtfs_exporter.py  test_mini.py  test_model.py  test_prettyprint.py  test_providers.py  test_spatial.py  test_utils.py
tests/data/providers/radcom/: lines.json  lines_43_direction_0.json  lines_43_direction_1.json  lines_43_stops_1012.json  lines_43_stops_1158.json  lines_43_stops_1181.json  lines_43_stops_1182.json  lines_43_stops_1183.json  lines_43_stops_1185.json  lines_43_stops_1217.json  lines_43_stops_1222.json  lines_43_stops_1223.json  lines_43_stops_1224.json  lines_43_stops_1225.json  lines_43_stops_1226.json  lines_43_stops_1228.json  lines_43_stops_1229.json  lines_43_stops_1230.json  lines_43_stops_1231.json  lines_43_stops_1234.json  lines_43_stops_1235.json  lines_43_stops_1236.json  lines_43_stops_1237.json  lines_43_stops_1241.json  lines_43_stops_1242.json  lines_43_stops_1243.json  lines_43_stops_1244.json  (+11 more)
