[tool.poetry]
name = "gtfs-exporter"
version = "0.1.0"
description = ""
authors = ["Mihai Balint <balint.mihai@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "=2.23.*"
polyline = "=1.4.*"
gtfslib = "=1.0.*"
PyGithub = "=1.51.*"
docopt = "=0.6.*"
environs = "=7.4.*"
clint = "=0.5.1"
ratelimit = "=2.2.1"
pandas = "=1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipdb = "^0.13.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
