[tool.poetry]
name = "gtfs-exporter"
version = "0.1.0"
description = ""
authors = ["Vlad Vesa <vlad@opentransport.ro>", "Claudiu Groza <claudiu@opentransport.ro>", "Mihai Balint <mihai@opentransport.ro>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "=2.23.*"
polyline = "=1.4.*"
gtfslib = "=1.0.*"
PyGithub = "=1.51.*"
docopt = "=0.6.*"
environs = "=7.4.*"
clint = "=0.5.1"
ratelimit = "=2.2.1"
pandas = "=1.0.3"
dateutils = "^0.6.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipdb = "^0.13.2"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
