[tool.poetry]
name = "exporter"
version = "0.0.1"
description = ""
authors = ["Vlad Vesa <vlad@opentransport.ro>", "Claudiu Groza <claudiu@opentransport.ro>", "Mihai Balint <mihai@opentransport.ro>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "=2.23.*"
polyline = "=1.4.*"
PyGithub = "=1.51.*"
docopt = "=0.6.*"
environs = "=7.4.*"
clint = "=0.5.1"
ratelimit = "=2.2.1"
pandas = "=1.0.3"
dateutils = "^0.6.8"
sqlalchemy = "^1.3.18"
six = "^1.15.0"
pyshp = "^2.1.0"
pyqtree = "^1.0.0"
paramiko = "^2.7.2"
pyinstaller = "^4.2"
setuptools = "^53.1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipdb = "^0.13.2"
autopep8 = "^1.5.3"
pylint = "^2.5.3"

[tool.poetry.scripts]
exporter = "exporter.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
